tests/neg/i15474b.check
-- Error: tests/neg/i15474b.scala:7:40 ---------------------------------------------------------------------------------
7 |    def apply(from: String): Int = from.toInt   // error: infinite loop in function body
  |                                   ^^^^^^^^^^
  |                                   Infinite loop in function body
  |                                   Test1.c.apply(from).toInt
